--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,30 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family= Dancing+Script & display = swap');
+#caixinha {
+	width: 250px;
+}
+.m-40 {
+	margin: 40px;
+}
 h1{
-    color: white;
-    font-size: 60px;
-    background-color: black;
-    border: 10px;
-    width: 300px;
-    margin: 10px;
-    font-family: 'BhuTuka Expanded One', cursive;
-font-family: 'Dancing Script', cursive;
-  
-}
-
-h2{
-    color: black ;
-    font-size: 20px;
-    background-color: green;
-    border: 10px;
-    width: 125px;
-    margin: 10px;
-}
-h3{
-    color:purple;
-    font-size: 15px;
+    color: pink;
     background-color: yellow;
-    border: 500px;
     width: 200px;
-    margin: 14;
-    
+    font-size: 40px;
+    font-family: 'Dancing Script', cursiva;
+}
+h2{color:white;
+    background-color: black;
+    width: 225px;
+    font-size: 40px;
+    font-family: 'Dancing Script', cursiva;
 }
