--- a/CSS/box.css
+++ b/CSS/box.css
@@ -6,7 +6,7 @@ div {
     height: 100px;
     border: 1px solid red ;
     margin: 10% ;
-    padding: 0 20px ;
+    padding: 10px 0px 0px 10px ;
     background-color: goldenrod;
     color: green;
     font-size: 50px;
