--- a/CSS/border.css
+++ b/CSS/border.css
@@ -14,4 +14,5 @@ div {
     border-top: 10px dashed purple;
     border-left: 10px double orangered;
     border-right: 10px groove black;
+    outline: blue 10px solid;
 }
