--- a/CSS/back_g.css
+++ b/CSS/back_g.css
@@ -6,4 +6,9 @@ header {
     height: 100px;
     border: 7px dashed red;
     background-color: rgb(7, 73, 255);
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfR50Pt_8_c4MZMig-09lj7VMfzsyQuhgwmg&usqp=CAU);
+background-repeat: no-repeat;
+
+
+
 }
