--- a/CSS/back_g.css
+++ b/CSS/back_g.css
@@ -7,7 +7,8 @@ header {
     border: 7px dashed red;
     background-color: rgb(7, 73, 255);
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfR50Pt_8_c4MZMig-09lj7VMfzsyQuhgwmg&usqp=CAU);
-background-repeat: repeat-x;
+background-repeat: no-repeat;
+background-position: right top;
 
 
 
