--- a/CSS/back_g.css
+++ b/CSS/back_g.css
@@ -8,7 +8,7 @@ header {
     background-color: rgb(7, 73, 255);
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfR50Pt_8_c4MZMig-09lj7VMfzsyQuhgwmg&usqp=CAU);
 background-repeat: no-repeat;
-background-position: right top;
+background-position: center;
 
 
 
