--- a/CSS/back_g.css
+++ b/CSS/back_g.css
@@ -9,6 +9,7 @@ header {
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfR50Pt_8_c4MZMig-09lj7VMfzsyQuhgwmg&usqp=CAU);
 background-repeat: no-repeat;
 background-position: center;
+background-size:contain;
 
 
 
