--- a/CSS/back_g.css
+++ b/CSS/back_g.css
@@ -10,6 +10,7 @@ header {
 background-repeat: no-repeat;
 background-position: center;
 background-size:cover;
+background-origin: border-box;
 
 
 
