--- a/CSS/back_g.css
+++ b/CSS/back_g.css
@@ -9,6 +9,7 @@ background-repeat: no-repeat;
 background-position: center;
 background-size:cover;
 background-origin: border-box;
+background-attachment:fixed;
 
 
 
