--- a/CSS/back_g.css
+++ b/CSS/back_g.css
@@ -3,14 +3,14 @@
 }
 
 main {
-background-color: rgb(7, 73, 255);
+/*background-color: rgb(7, 73, 255);
 background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfR50Pt_8_c4MZMig-09lj7VMfzsyQuhgwmg&usqp=CAU);
 background-repeat: no-repeat;
 background-position: center;
 background-size:cover;
 background-origin: border-box;
-background-attachment:fixed;
+background-attachment:fixed;*/
 
-
+background:rgb(7, 73, 255) url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfR50Pt_8_c4MZMig-09lj7VMfzsyQuhgwmg&usqp=CAU) no-repeat center / cover border-box fixed ;
 
 }
