--- a/position.css
+++ b/position.css
@@ -1,3 +1,4 @@
+div{margin: 100px; ;}
 .box {
     width: 50px;
     height: 50px;
@@ -6,9 +7,9 @@
   
   .box1 {
     background-color: red;
-    position: relative;
-    left: 100px;
-    top: 150px
+    position: absolute;
+    left: 0px;
+    top: 0px
   }
   
   .box2 {
