--- a/position.css
+++ b/position.css
@@ -7,15 +7,64 @@ div{margin: 100px; ;}
   
   .box1 {
     background-color: red;
-    position: absolute;
-    left: 0px;
-    top: 0px
+    position: fixed;
+    left: 100px;
+    top: 100px
   }
   
   .box2 {
     background-color: green;
+    left: 100px;
+    top: 100px
   }
+   
+  
   
   .box3 {
     background-color: blue;
+    left: 100px;
+    top: 100px
+  
   }
+  .box4 {
+    background-color: red;
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    z-index: 3;
+  }
+  
+  .box5 {
+    background-color: green;
+    position: absolute;
+    left: 10px;
+    top: 10px
+  }
+  
+  .box6 {
+    background-color: blue;
+    position: absolute;
+    left: 15px;
+    top: 15px
+  }
+  .container {
+    display: flex;
+    justify-content: space-between;
+}
+.box {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 8px;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.red {
+    background-color: red;
+}
+
+.green {
+    background-color: green;
+}
