--- a/grid.css
+++ b/grid.css
@@ -13,6 +13,9 @@ body {
  header {
     grid-area: header;
     background-color: green;
+    display: flex;
+    justify-content: space-between;
+    align-items: center ;
  }
  main{
     grid-area: main;
