--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap');
 #caixinha {
 	width: 250px;
 }
@@ -16,6 +17,6 @@ h2{color:white;
     background-color: black;
     width: 225px;
     font-size: 40px;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Rubik Vinyl',cursive;
 }
 
